--- a/Dataset-Creation.ipynb
+++ b/Dataset-Creation.ipynb
@@ -28238,7 +28238,7 @@
     "\n",
     "def get_omdb_info(title):\n",
     "    base_url = \"http://www.omdbapi.com/?\"\n",
-    "    parameters = {\"apikey\": \"f694132b\", 't': title}\n",
+    "    parameters = {\"apikey\": \"your-api-key\", 't': title}\n",
     "    params_encoded = urllib.parse.urlencode(parameters)\n",
     "    full_url = base_url + params_encoded\n",
     "    return requests.get(full_url).json()\n",
