Updated subtasks in Dataset-Creation.ipynb

--- a/Dataset-Creation.ipynb
+++ b/Dataset-Creation.ipynb
@@ -13788,11 +13788,11 @@
     "### Subtasks :\n",
     " - ~~removing [1] [2] etc~~\n",
     " - ~~long string handling~~\n",
-    " - converting release date into datetime object\n",
+    " - ~~converting release date into datetime object~~\n",
     " - ~~converting running time into integer~~\n",
     " - ~~inspecting movies that could not be scraped~~\n",
     " - ~~fixing 'Based on': ['\"', 'Snow White', '\"', 'by the', 'Brothers Grimm']~~\n",
-    " - convert budget and box office into numbers"
+    " - ~~convert budget and box office into numbers~~"
    ]
   },
   {
